# phanns_dataset_builder

./: .gitignore  .pre-commit-config.yaml  NCBI_fetch.py  OTH_fetch.sh  README.md  config.toml  logger.py  positive_terms.toml  utils.py
dataset-builder/: README.md  pyproject.toml  requirements.txt
dataset-builder/src/: NCBI_fetch.py
dataset-builder/src/misc_tools/: classify_fasta_file.py
